Fixed the long games wrap issue. ULTIWEB-73

--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -603,3 +603,8 @@ Assigned to:	You
 div[ng-view]{
   min-height: 100%
 }
+.ellipsed {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
